VOLEitH-FPGA/hls_component/hls_component/hls/.autopilot/db/vole.cpp.xilinx-performance-pragma-detector.err.log
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:96:46: error: Invalid Directive: for current device, ram_2p + BRAM is invalid combination for BIND_STORAGE's option 'type + impl'
    #pragma HLS BIND_STORAGE variable=u type=ram_2p impl=BRAM
                                             ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:97:46: error: Invalid Directive: for current device, ram_2p + URAM is invalid combination for BIND_STORAGE's option 'type + impl'
    #pragma HLS BIND_STORAGE variable=V type=ram_2p impl=URAM
                                             ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:145:46: error: Invalid Directive: for current device, ram_2p + BRAM is invalid combination for BIND_STORAGE's option 'type + impl'
    #pragma HLS BIND_STORAGE variable=u type=ram_2p impl=BRAM
                                             ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:146:46: error: Invalid Directive: for current device, ram_2p + URAM is invalid combination for BIND_STORAGE's option 'type + impl'
    #pragma HLS BIND_STORAGE variable=V type=ram_2p impl=URAM
                                             ^
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:3:
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.h:2:
In file included from /opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream.h:12:
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:98:9: error: use of undeclared identifier '__fpga_fifo_pop'
        __fpga_fifo_pop(&V, &dout);
        ^
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:109:9: note: in instantiation of member function 'hls::stream<ap_uint<128>, 0>::read' requested here
        read(tmp);
        ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:20:29: note: in instantiation of member function 'hls::stream<ap_uint<128>, 0>::read' requested here
            sd[i]=seed_strm.read();
                            ^
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:3:
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.h:2:
In file included from /opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream.h:12:
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:127:9: error: use of undeclared identifier '__fpga_fifo_push'
        __fpga_fifo_push(&V, &din);
        ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:33:31: note: in instantiation of member function 'hls::stream<ap_uint<256>, 0>::write' requested here
                    r_strm[i].write(r);
                              ^
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:3:
In file included from /home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.h:2:
In file included from /opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream.h:12:
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:98:9: error: use of undeclared identifier '__fpga_fifo_pop'
        __fpga_fifo_pop(&V, &dout);
        ^
/opt/Xillinx/2025.1/Vitis/common/technology/autopilot/hls_stream_39.h:109:9: note: in instantiation of member function 'hls::stream<ap_uint<256>, 0>::read' requested here
        read(tmp);
        ^
/home/tkgong/Research/VOLE-ocity/VOLEitH-FPGA/hls_component/vole.cpp:64:39: note: in instantiation of member function 'hls::stream<ap_uint<256>, 0>::read' requested here
                r_t[0][i] = r_strm[i].read();
                                      ^
